--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -4,6 +4,7 @@
  */
 @import url(../../lib/font/league-gothic/league-gothic.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
 /**
  * Solarized colors by Ethan Schoonover
  */
