--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -19,7 +19,7 @@ body {
 
 .reveal {
   font-family: "Lato", sans-serif;
-  font-size: 40px;
+  font-size: 35px;
   font-weight: normal;
   color: #000; }
 
@@ -78,6 +78,23 @@ body {
 .reveal p {
   margin: 20px 0;
   line-height: 1.3; }
+
+#left {
+  left:-8.33%;
+  text-align: center;
+  float: left;
+  width:50%;
+  z-index:-10;
+}
+
+#right {
+  left:31.25%;
+  top: 75px;
+  float: right;
+  text-align: center;
+  z-index:-10;
+  width:50%;
+}
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
@@ -233,9 +250,9 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
-  background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  background: rgba(255, 255, 255, 0.12); }
+  /*border: 4px solid #000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);*/
 
 .reveal section img.plain {
   border: 0;
